[package]
name = "cpixels-android-lib"
version = "0.1.0"
authors = ["demont93 <demont93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
cpixels = { git = "https://github.com/demont93/cpixels" , branch = "main"}

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.18.0", default-features = false }
ndk = "0.3.0"
