[package]
name = "cpixel"
version = "0.1.0"
authors = ["demont93 <demont93@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
itertools = "0.10.0"
lazy_static = "1.4.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.19.0", default-features = false }
ndk = "0.3.0"
